@@ -1,0 +1,2 @@
+/* __lrint is in s_llrint.c  */
+/* __lrint is in s_llrint.c  */
