@@ -1,1 +1,0 @@
-/* __lrintf is in s_llrintf.c  */
